updated to soft deletion. also, trying to access a delete/never-created post both go to same place now. Had to add public_post_id and delete_bit to the posts table

--- a/html/postNotExist.html
+++ b/html/postNotExist.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="centered">
-        <p>post has been deleted. goodbye.</p>
+        <p>post does not exist. go [<a href="/main" class="grey">home</a>].</p>
     </div>
 </body>
 </html>
