realized I don't need public_post_id due to the fact that I don't want to be shifting id of the posts at all according to my design. also fixed bug so when non-owning user tries to delete post through url, will be kicked to 404. also added link for going back to profile from postpage if logged in.

--- a/html/postPage.html
+++ b/html/postPage.html
@@ -7,7 +7,10 @@
 <body>
     <h2>post #: <?= $post->postId ?> by <?= $post->postername ?></h2>
     <div class="topright">
-        <a href = "/main">tiny.blog</a>
+        <a href = "/main">tiny.blog</a><br>
+        <? if($this->authorizerObject->isLoggedIn()){ ?>
+            [<a href = "/main/user/action/view/userId/<?= $this->authorizerObject->getUserId(); ?>">profile</a>]
+        <? } ?>
     </div>
     <br>
 
