fixed main to take less lines, moved some central objects up to baseController. move Dbconnect objects directly into the DbGateways.

--- a/html/postPage.html
+++ b/html/postPage.html
@@ -8,8 +8,8 @@
     <h2>post #: <?= $post->postId ?> by <?= $post->postername ?></h2>
     <div class="topright">
         <a href = "/main">tiny.blog</a><br>
-        <? if($this->authorizerObject->isLoggedIn()) { ?>
-            [<a href = "/main/user/action/view/userId/<?= $this->authorizerObject->getUserId(); ?>">profile</a>]
+        <? if($this->authorizer->isLoggedIn()) { ?>
+            [<a href = "/main/user/action/view/userId/<?= $this->authorizer->getUserId(); ?>">profile</a>]
         <? } ?>
     </div>
     <br>
