--- a/html/userSettings.html
+++ b/html/userSettings.html
@@ -8,7 +8,7 @@
     <h2>user settings</h2>
     <div class="topright">
         <a href = "/main">tiny.blog</a><br>
-        [<a href = "/main/user/action/view/userId/<?= $this->authorizerObject->getUserId() ?>">back</a>]
+        [<a href = "/main/user/action/view/userId/<?= $this->authorizer->getUserId() ?>">back</a>]
     </div>
     <br>
 
