--- a/html/userPage.html
+++ b/html/userPage.html
@@ -8,12 +8,12 @@
     <h1><?= $profileUser->username ?>'s Profile</h1>
     <div class="topright">
         <a href = "/main">tiny.blog</a><br>
-        <? if($this->authorizerObject->ownsUserPage()) { ?>
+        <? if($this->authorizer->ownsUserPage()) { ?>
             [<a href = "/main/user/action/post">post</a>]<br>
             [<a href = "/main/user/action/settings">settings</a>]<br>
         <? } ?>
 
-        <? if($this->authorizerObject->isLoggedIn()) { ?>
+        <? if($this->authorizer->isLoggedIn()) { ?>
             [<a href = "/main/user/action/logout">logout</a>]<br>
         <? } ?>
     </div>
@@ -30,7 +30,7 @@
         <hr>
         <? foreach($postArray as $post) { ?>
             <p class="smallP">Post #: <a href="/main/post/action/view/postId/<?= $post->postId ?>" class="grey"><?= $post->postId ?></a>
-            <? if($this->authorizerObject->canDelete($post->postId)) { ?>
+            <? if($this->authorizer->canDelete($post->postId)) { ?>
                 [<a href="/main/post/action/delete/postId/<?= $post->postId ?>" class="grey">delete</a>]
             <? } ?>
             <br>
