--- a/html/userPage.html
+++ b/html/userPage.html
@@ -19,25 +19,11 @@
     </div>
     <br>
 
-    <div class="left">
+    <div class="right">
         <p>
             Number of posts: <?= $numberPosts ?><br>
             Number of comments: <?= $numberComments ?>
         </p>
-    </div>
-
-    <div class="right posts">
-        <hr>
-        <? foreach($postArray as $post) { ?>
-            <p class="smallP">Post #: <a href="/main/post/action/view/postId/<?= $post->postId ?>" class="grey"><?= $post->postId ?></a>
-            <? if($this->authorizer->canDelete($post->postId)) { ?>
-                [<a href="/main/post/action/delete/postId/<?= $post->postId ?>" class="grey">delete</a>]
-            <? } ?>
-            <br>
-            <?= $post->postContent ?><br><br>
-            <?= $post->numberComments ?> comments</p>
-            <hr>
-        <? } ?>
     </div>
 </body>
 </html>
