--- a/html/index.html
+++ b/html/index.html
@@ -8,42 +8,12 @@
     <h1><a href = "/main">tiny.blog</a></h1>
 
     <div class="topright">
-        <? if(!$loggedIn) { ?>
+        <? if(!$this->authorizer->isLoggedIn()) { ?>
             [<a href = "/main/login">login</a>]<br><br>
         <? } else { ?>
             [<a href = "/main/user/action/view/userId/<?= $this->authorizer->getUserId() ?>">user</a>]<br>
             [<a href = "/main/user/action/logout">logout</a>]<br>
-            logged in as <?= $username ?>
-        <? } ?>
-    </div>
-
-    <div class="left posts">
-        <hr>
-        <? foreach($recentPostsArray as $post) { ?>
-            <p class="smallP">Post #: <a href="/main/post/action/view/postId/<?= $post->postId ?>" class="grey"><?= $post->postId ?></a> by <a href="/main/user/action/view/userId/<?= $post->posterId ?>" class="grey"><?= $post->postername ?></a><br>
-            <?= $post->postContent ?><br>
-            <?= $post->numberComments ?> comments</p>
-            <hr>
-        <? } ?>
-    </div>
-
-    <div class="left posts">
-        <hr>
-        <? foreach($recentPostsArray as $post) { ?>
-            <p class="smallP">Post #: <a href="/main/post/action/view/postId/<?= $post->postId ?>" class="grey"><?= $post->postId ?></a> by <a href="/main/user/action/view/userId/<?= $post->posterId ?>" class="grey"><?= $post->postername ?></a><br>
-            <?= $post->postContent ?><br>
-            <?= $post->numberComments ?> comments</p>
-            <hr>
-        <? } ?>
-    </div>
-
-    <div class="left posts">
-        <hr>
-        <? foreach($recentPostsArray as $post) { ?>
-            <p class="smallP">Post #: <a href="/main/post/action/view/postId/<?= $post->postId ?>" class="grey"><?= $post->postId ?></a> by <a href="/main/user/action/view/userId/<?= $post->posterId ?>" class="grey"><?= $post->postername ?></a><br>
-            <?= $post->postContent ?><br>
-            <?= $post->numberComments ?> comments</p>
-            <hr>
+            logged in as <?= $this->authorizer->getUsername() ?>
         <? } ?>
     </div>
 
@@ -65,5 +35,6 @@
             created by <a href="mailto:patrick.wan@learninga-z.com" class="grey">patrick wan</a> for laz project<br>
             June 2016
         </p>
+    </div>
 </body>
 </html>
