trying to increase user predictability and decrease surprise

--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
         <? if(!$this->authorizer->isLoggedIn()) { ?>
             [<a href = "/main/login">login</a>]<br><br>
         <? } else { ?>
-            [<a href = "/main/user/action/view/userId/<?= $this->authorizer->getUserId() ?>">user</a>]<br>
+            [<a href = "/main/user/action/view/userId/<?= $this->authorizer->getUserId() ?>">user</a>]
             [<a href = "/main/user/action/logout">logout</a>]<br>
             logged in as <?= $this->authorizer->getUsername() ?>
         <? } ?>
