--- a/html/userPost.html
+++ b/html/userPost.html
@@ -7,7 +7,7 @@
 <body>
     <h1>new post</h1>
     <div class="topright">
-        <a href = "/main">tiny.blog</a><br>
+        <a href = "/main">tiny.blog</a>
         [<a href = "/main/user/action/view/userId/<?= $this->authorizer->getUserId() ?>">back</a>]
     </div>
     <br>
