cleaned up index and post pages to match styling of rest of site

--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
-    <h1><a href = "/main">tiny.blog</a></h1>
+    <h1>tiny.blog</h1>
 
     <div class="topright">
         <? if(!$this->authorizer->isLoggedIn()) { ?>
