more small changes to UI

--- a/html/index.html
+++ b/html/index.html
@@ -30,6 +30,10 @@
         </form>
     </div>
 
+    <div class="left listtitle">
+        last 5 posts
+    </div>
+
     <div class="watermark">
         <p>
             created by <a href="mailto:patrick.wan@learninga-z.com" class="grey">patrick wan</a> for laz project<br>
