--- a/html/userPage.html
+++ b/html/userPage.html
@@ -23,5 +23,9 @@
             Number of posts: <?= $numberPosts ?><br>
         </p>
     </div>
+
+    <div class="left listtitle">
+        <?= $profileUser->username; ?>'s posts:
+    </div>
 </body>
 </html>
