--- a/html/userPost.html
+++ b/html/userPost.html
@@ -8,7 +8,7 @@
     <h1>new post</h1>
     <div class="topright">
         <a href = "/main">tiny.blog</a>
-        [<a href = "/main/user/action/view/userId/<?= $this->authorizer->getUserId() ?>">back</a>]
+        [<a href = "/main/user/action/view/userId/<?= $userId ?>">back</a>]
     </div>
     <br>
 
