--- a/html/index.html
+++ b/html/index.html
@@ -8,12 +8,12 @@
     <h1>tiny.blog</h1>
 
     <div class="topright">
-        <? if(!$this->isLoggedInAccess()) { ?>
+        <? if(!$this->isLoggedIn()) { ?>
             [<a href = "/main/login">login</a>]<br><br>
         <? } else { ?>
-            [<a href = "/main/user/action/view/userId/<?= $userId ?>">user</a>]
+            [<a href = "/main/user/action/view/userId/<?= $indexView['userId'] ?>">user</a>]
             [<a href = "/main/user/action/logout">logout</a>]<br>
-            logged in as <?= $username ?>
+            logged in as <?= $indexView["username"]; ?>
         <? } ?>
     </div>
 
