--- a/html/userSettings.html
+++ b/html/userSettings.html
@@ -8,7 +8,7 @@
     <h1>user settings</h1>
     <div class="topright">
         <a href = "/main">tiny.blog</a>
-        [<a href = "/main/user/action/view/userId/<?= $userId ?>">back</a>]
+        [<a href = "/main/user/action/view/userId/<?= $userSettingsView['userId'] ?>">back</a>]
     </div>
     <br>
 
